bg of body fixes

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Rest Countries</title>
   </head>
-  <body class="bg-very-light-gray text-very-dark-blue-t transition-all dark:bg-very-dark-blue-b dark:text-white">
+  <body class="bg-very-light-gray text-very-dark-blue-t transition-all ease-in dark:bg-very-dark-blue-b dark:text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
